--- a/PackageEasy/PackageEasy.Common/Config/log4net.config
+++ b/PackageEasy/PackageEasy.Common/Config/log4net.config
@@ -9,6 +9,7 @@
 			<!--定义文件存放位置-->
 			<file value="PackageEasy\\Log\\Info\\"/>
 			<appendToFile value="true"/>
+			<param name="Encoding" value="utf-8" />
 			<rollingStyle value="Date"/>
 			<datePattern value="yyyyMMdd'.log'"/>
 			<staticLogFileName value="false"/>
@@ -30,6 +31,7 @@
 			<file value="PackageEasy\\Log\\Error\\"/>
 			<appendToFile value="true"/>
 			<rollingStyle value="Date"/>
+			<param name="Encoding" value="utf-8" />
 			<datePattern value="yyyyMMdd'.log'"/>
 			<staticLogFileName value="false"/>
 			<param name="MaxSizeRollBackups" value="100"/>
@@ -51,6 +53,7 @@
 			<appendToFile value="true"/>
 			<rollingStyle value="Composite"/>
 			<datePattern value="yyyyMMdd'.log'"/>
+			<param name="Encoding" value="utf-8" />
 			<staticLogFileName value="false"/>
 			<preserveLogFileNameExtension value="true"/>
 			<param name="MaxSizeRollBackups" value="-1"/>
