--- a/PackageEasy/PackageEasy/PackageEasy.csproj
+++ b/PackageEasy/PackageEasy/PackageEasy.csproj
@@ -94,7 +94,7 @@
   </ItemGroup>
 
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-    <Exec Command="xcopy $(ProjectDir)Themes\*.*  $(TargetDir)Themes\ /s /y&#xD;&#xA;xcopy $(ProjectDir)Plugin\*.*  $(TargetDir)Data\Plugin\ /s /y" />
+    <Exec Command="xcopy $(ProjectDir)Themes\*.*  $(TargetDir)Data\Themes\ /s /y&#xD;&#xA;xcopy $(ProjectDir)Plugin\*.*  $(TargetDir)Data\Plugin\ /s /y" />
   </Target>
 
 </Project>
